fix: fix body fill on firefox
https://spacelephant.tpondemand.com/entity/225-footer-non-colle-en-bas-fill

--- a/public/css/style-template.css
+++ b/public/css/style-template.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: Source Sans Pro !important;
+  height: 100%;
 }
 
 .buttons {
